app/components/History.css
.backButton {
  position: absolute;
}

.counter {
  position: absolute;
  top: 30%;
  left: 45%;
  font-size: 10rem;
  font-weight: bold;
  letter-spacing: -.025em;
}

.btnGroup {
  position: relative;
  top: 500px;
  width: 480px;
  margin: 0 auto;
}

.btn {
  font-size: 1.6rem;
  font-weight: bold;
  background-color: #fff;
  border-radius: 50%;
  margin: 10px;
  width: 100px;
  height: 100px;
  opacity: .7;
  cursor: pointer;
  font-family: Arial, Helvetica, Helvetica Neue;
}

.btn:hover {
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
}

li {
  color: #BEBEBE;
  cursor: pointer;
}

.preview {
  position: fixed;
  top: 10px;
  width: 45%;
  padding: 20px;
  right: 0;
}

.logo {
  bottom: 0;
  position: fixed;
  right: 15px;
}

span.listNumber {
  color: #A0C558;
  width: 10px;
}

